<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--    android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--    android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--    android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--    android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--    tools:context=".LoginActivity"-->


    <!-- Login Button -->

    <!-- Link to Login Screen -->

    <!--    android:textColor="@android:color/white"-->
    <!--    android:textColorHint="@android:color/white"-->

    <ImageView
        android:id="@+id/logo"
        style="@style/logoStyle"
        android:layout_marginTop="52dp"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/email"
        style="@style/editTextStyle"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/password"
        style="@style/editTextStyle"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <Button
        android:id="@+id/btn_login"
        style="@style/buttonStyle"
        android:text="@string/btn_login"
        app:layout_constraintBottom_toTopOf="@+id/btn_signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/btn_signup"
        style="@style/navButtonStyle"
        android:text="@string/btn_register_new_user"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/btn_reset_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_reset_password" />

    <Button
        android:id="@+id/btn_reset_password"
        style="@style/navButtonStyle"
        android:layout_marginBottom="204dp"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--    <ProgressBar-->
    <!--        android:id="@+id/loading"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:layout_marginTop="64dp"-->
    <!--        android:layout_marginBottom="64dp"-->
    <!--        android:visibility="gone"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="@+id/password"-->
    <!--        app:layout_constraintStart_toStartOf="@+id/password"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        app:layout_constraintVertical_bias="0.3" />-->

</androidx.constraintlayout.widget.ConstraintLayout>